fixed letter spacing

--- a/ckanext/odm_nav/fanstatic/aeviator_nav_concept.css
+++ b/ckanext/odm_nav/fanstatic/aeviator_nav_concept.css
@@ -16,6 +16,7 @@
          url('fonts/droidserif_regular/DroidSerif-Regular-webfont.woff') format('woff'),
          url('fonts/droidserif_regular/DroidSerif-Regular-webfont.ttf') format('truetype'),
          url('fonts/droidserif_regular/DroidSerif-Regular-webfont.svg#droid_serifregular') format('svg');
+
     font-weight: normal;
     font-style: normal;
 
@@ -479,7 +480,7 @@ header#od-head .icon-od-logo {
     font-size: 48px;
     line-height: 48px;
     font-weight: 700;
-    letter-spacing: -2px;
+    letter-spacing: -4px;
     padding-left: 35px;
   }
 
